# house-pricing-mlops

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.huggingface  Dockerfile.render  Makefile  README.md  debug_minio.py  deploy-frontend.sh  docker-compose.prod.yml  docker-compose.yml  docker_improvements.md  pyproject.toml  render.yaml  sheet.md  start.sh  test_prediction.py
.dvc/: config
.github/workflows/: ci.yml  ml-pipeline.yml
airflow/: Dockerfile
airflow/dags/: dataops_pipeline.py  retraining_trigger.py  training_pipeline.py
config/: main.yaml  model.yaml
data/processed/: preprocessor.pkl.dvc  test.csv.dvc  train.csv.dvc
data/raw/: victory.txt.dvc
docker/mlflow/: Dockerfile
docs/: ANALYSIS_REPORT.md  GITHUB_ACTIONS.md  PRD.md
frontend/: .env.production  .eslintrc.json  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  vercel.json  vitest.config.mts  vitest.config.ts  vitest.setup.ts
frontend/__tests__/contexts/: ApiKeyContext.test.tsx  HistoryContext.test.tsx
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ErrorBoundary.tsx  Providers.tsx  ThemeProvider.tsx  ThemeToggle.tsx
frontend/lib/: api.ts
huggingface/: README.md
monitoring/grafana/: grafana.ini
monitoring/prometheus/: prometheus.yml
scripts/: deploy-huggingface.sh  export_model_for_render.py  generate-certs.sh  render_start.sh
tests/: conftest.py
tests/integration/: test_api.py  test_dags.py  test_drift.py  tmp_test_api.py
tests/unit/: test_service.py  test_train.py
traefik/: dynamic.yml  traefik.yml
(+68 files in other folders)
