[project]
name = "house-pricing"
version = "0.1.0"
description = "MLOps Enterprise Project"
authors = [
    {name = "cSago"}
]
readme = "README.md"
packages = [{include = "house_pricing", from = "src"}]
requires-python = "^3.10"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "dvc (>=3.64.2,<4.0.0)",
    "dvc[s3] (>=3.64.2,<4.0.0)",
    "mlflow (>=3.7.0,<4.0.0)",
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "prometheus-client (>=0.23.1,<0.24.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "prometheus-fastapi-instrumentator (>=7.1.0,<8.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "pandera (>=0.27.0,<0.28.0)",
    "sniffio (>=1.3.1,<2.0.0)",
    "evidently (>=0.7.17,<0.8.0)",  # Drift detection
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",  # JWT tokens
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",  # Password hashing
    "bcrypt (>=4.2.0,<5.0.0)"  # Bcrypt backend
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.isort]
profile = "black"
line_length = 88
